--- a/views/admin/login.hbs
+++ b/views/admin/login.hbs
@@ -7,7 +7,7 @@
   </div>
   <div class="col-md-6">
     <label for="inputPassword4" class="form-label">Contraseña</label>
-    <input type="password" class="form-control" id="inputPassword4" name="password">
+    <input type="password" class="form-control" id="inputPassword4" name="password" placeholder="Password">
   </div>
   <div class="col-12">
     <button type="submit" class="btn btn-primary">Iniciar sesión</button>
