--- a/views/admin/novedades.hbs
+++ b/views/admin/novedades.hbs
@@ -1,5 +1,60 @@
+<div class="container" style="margin:50px auto">
 <div class="row">
 
-    <p class="text-end">Hola {{usuario}} <a class="btn btn-danger" href="/admin/login/logout"> Cerrar sesion<i class="fas fa-sign-out-alt"> </i></a>
-    
-    </p>
+    <p class="text-end">Hola {{usuarios}} !<a class="btn btn-danger" href="/admin/login/logout"> Cerrar sesion<i class="fas fa-sign-out-alt"> </i></a> </p>
+    </div>
+
+    <div class="row">
+        <div class="col-7" style="margin-top:-9px ;">
+            <h2>Listado de novedades</h2>
+
+        </div>
+<div class="col-5 text-end"> 
+     <a href="" class="btn btn-success"><i class="fas fa-plus"></i> Nuevo </a> 
+        
+</div>
+
+
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Titulo</th>
+                        <th scope="col" class="text-center">Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                      {{#each novedades}}
+                    <tr>
+                        <th scope="row">{{id}}</th>
+                        <td>{{titulo}}</td>
+                        <td class="text-center">
+                            <a href="#" class="btn btn-sm btn-secondary"><i class="fa fa-pencil"></i></a>
+                            <a href="/admin/novedades/eliminar/{{id}}" class="btn btn-sm btn-secondary"><i class="fa fa-trash"></i></a>
+                        </td>
+                    </tr>
+                      {{/each}}
+                </tbody>
+            </table>
+        </div>
+
+
+    </div>
+
+ 
+    <section class="holder">
+        <h2>Novedades</h2>
+        {{#each novedades}}
+        <div class="novedades">
+            <h3>{{titulo}}</h3>
+            <h4>{{subtitulo}}</h4>
+            <p>{{cuerpo}}</p>
+            <hr>
+</div>
+{{/each}}
+</section>
+</div>
