--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -32,8 +32,9 @@
 <ul>
 <li><a class="{{#if isInicio}}activo{{/if}}" href="/">Inicio</a></li>
 <li><a class="{{#if isLentesvr}}activo{{/if}}" href="/lentesvr">Lentes VR</a> </li>
-<li><a class="{{#if isHistoria}}activo{{/if}}" href="/historia">Historia VR</a> </li>
+<li><a class="{{#if isHistoria}}activo{{/if}}" href="/historia">Historia</a> </li>
 <li><a class="{{#if isGaleria}}activo{{/if}}" href="/galeria">Galeria</a></li>
+<li><a class="{{#if isnoticias}}activo{{/if}}" href="/noticias">Noticias</a></li>
 <li><a class="{{#if isContacto}}activo{{/if}}" href="/contacto">Contacto</a></li>
 </ul>
 
