--- a/views/admin/layout.hbs
+++ b/views/admin/layout.hbs
@@ -24,7 +24,7 @@
        
        <li><a href="http://www.twitter.com" target="_blank"><img src="/images/twitter.png" width="35" height="35" alt="Twitter"></a></li>
        
-       <li><a href="//http://www.instagram.com" target="_blank"><img src="/images/instagram.png" width="35" height="35" alt="Insta"></a></li>
+       <li><a href="http://www.instagram.com" target="_blank"><img src="/images/instagram.png" width="35" height="35" alt="Insta"></a></li>
                  
     </ul>
 </div><!--cierra nav-sociales-->
