--- a/public/stylesheets/estilo.css
+++ b/public/stylesheets/estilo.css
@@ -14,6 +14,7 @@
 
 
 
+
 #nav-sociales {
 	height: 35px;
 	width: 100%;
@@ -84,7 +85,7 @@
 	font-family: Consolas;
 }
 p {
-	font-family: "Century Gothic";
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	margin-right: 5px;
 	margin-left: 5px;
 	font-size: 14px;
