--- a/views/admin/novedades.hbs
+++ b/views/admin/novedades.hbs
@@ -13,9 +13,20 @@
      <a href="/admin/novedades/agregar" class="btn btn-success"><i class="fas fa-plus"></i> Nuevo </a> 
         
 </div>
-
-
+<div class="col-3">
+    <form class="form-inline my-2 my-lg-0" action="/admin/novedades" method="get">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="q" {{#if q}} value="{{q}}" {{/if}}>
+    <button class="btn btn-secondary my-2 my-sm-0" type="submit" style="margin-left: 110px;"> <i class="fa fa-search"></i>
+    </button>
+    </form>
+</div> 
     </div>
+
+{{#if is_search}}
+{{#unless novedades.lenght}}
+No se encontraron resultados para "<strong>{{q}}</strong>"
+{{/unless}}
+{{/if}}
 
     <div class="row">
         <div class="col">
