--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,13 +15,13 @@
 
 <div id="nav-sociales">
     <ul> 
-       <li><a href="http://www.facebook.com" target="_blank"><img src="images/facebook.png" width="35" height="35" alt="Face"></a></li>
+       <li><a href="http://www.facebook.com"><img src="images/facebook.png" width="35" height="35" alt="Face"></a></li>
       
-       <li><a href="http://www.youtube.com" target="_blank"><img src="images/youtube.png" width="35" height="35" alt="Youtube"></a></li>
+       <li><a href="http://www.youtube.com"><img src="images/youtube.png" width="35" height="35" alt="Youtube"></a></li>
        
-       <li><a href="http://www.twitter.com" target="_blank"><img src="images/twitter.png" width="35" height="35" alt="Twitter"></a></li>
+       <li><a href="http://www.twitter.com"><img src="images/twitter.png" width="35" height="35" alt="Twitter"></a></li>
        
-       <li><a href="//http://www.instagram.com" target="_blank"><img src="images/instagram.png" width="35" height="35" alt="Insta"></a></li>
+       <li><a href="//http://www.instagram.com"><img src="images/instagram.png" width="35" height="35" alt="Insta"></a></li>
                  
     </ul>
 </div><!--cierra nav-sociales-->
