--- a/views/noticias.hbs
+++ b/views/noticias.hbs
@@ -3,8 +3,8 @@
 <p class="titulonoticias">Enterate de las últimas noticias sobre Realidad Virtual y tecnologia</p>
 {{#each novedades}}
 <div class="noticias">
-<h2>{{titulo}}</h2>
-<h3>{{subtitulo}}</h3>
+<h1 style="font-size: 30px ;">{{titulo}}</h1>
+<h3 style="color:yellow">{{subtitulo}}</h3>
 <p>{{cuerpo}}</p>
 </div>
 
