--- a/views/admin/novedades.hbs
+++ b/views/admin/novedades.hbs
@@ -22,8 +22,8 @@
 </div> 
     </div>
 
-{{#if is_search}}
-{{#unless novedades.lenght}}
+{{#if is_search}}   
+{{#unless novedades.length}}
 No se encontraron resultados para "<strong>{{q}}</strong>"
 {{/unless}}
 {{/if}}
